[project]
name = "langchain-leaning"
version = "0.1.0"
description = "langchain leaning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "langchain-community>=0.4.0",
    "jupyter>=1.0.0",
    "mysql-connector-python>=9.5.0",
    "langchain-google-genai>=3.2.0",
    "langchain-qwq>=0.3.0",
    "playwright>=1.56.0",
    "pydantic>=2.12.4",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
